# SoftDev

./: .gitignore  README.md  file.txt  file2.txt  link_to_notes_hard
challenges/dev1/: Makefile  test
challenges/dev2/: README.txt  gdb.py  public
challenges/dev3/: clean_directory.sh  compile_chain.sh
challenges/dev3/project/: configure.ac
challenges/dev3/project/src/: Makefile.am
challenges/dev3/project/src/lib_foo/: Makefile.am
challenges/dev3/project/src/main/: Makefile.am
challenges/python1/: README  python1_sol_lists.py  python1_sol_pandas.py
challenges/python2/: SECRET  python2_sol.py  test.py
challenges/python3/: map2.txt  map3.txt  python_3_sol.py
challenges/shell1/: sol.sh
challenges/shell2/: sol.sh
challenges/shell3/: init.bash  sol.bash
